--- a/experimental code/DetermineDateRangebyCluster.ipynb
+++ b/experimental code/DetermineDateRangebyCluster.ipynb
@@ -532,12 +532,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting Groupby to identify Year/Cluster_Reference/each Cluster DOY per Cluster/COY_Count in cluster and placing it into a Panda. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting Groupby and placing into a Panda. \n",
+    "# Setting Groupby to identify Year/Cluster_Reference/each Cluster DOY per Cluster/COY_Count in cluster and placing it into a Panda. \n",
     "#em_doy_list2 = emission_points_0315.groupby( [ \"year\", \"cluster_reference\"] ).size().to_frame(name = 'count').reset_index()\n",
     "em_doy_list2 = emission_points_0315.groupby( [ \"year\", \"cluster_reference\", 'doy'] ).size().to_frame(name = 'doy_count').reset_index()\n",
     "em_doy_list2 = em_doy_list2.rename(columns = {'doy':'cluster_doy'})"
