Updating Data Wrangling of NASA V1

--- a/experimental code/Data Wrangling of NASA V1 Combined .ipynb
+++ b/experimental code/Data Wrangling of NASA V1 Combined .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Wrangling of USDA Fire Emissions Data Set (2003-2015)"
+    "### Data Wrangling of NASA V1 Combined Data Set"
    ]
   },
   {
