--- a/experimental code/EmissionsCombineCSV.ipynb
+++ b/experimental code/EmissionsCombineCSV.ipynb
@@ -32,7 +32,9 @@
     "4 Longitude   Longitude of pixel center in decimal degree  \n",
     "5 Latitude   Latitude of pixel center in decimal degree     \n",
     "6 Grid10k   Index of 10 km grid to be used in a future dataset of aggregated emissions   \n",
+    "### Covertype     \n",
     "7 Covertype   0 = Unclassified/Open Water/ Perennial Ice/Snow/Barren Land; 1 = herbaceous; 2 = shrub/scrub; 3 = forest; 21-24 = deveolped; 81 = hay/pasture; 82 = cultivated crop; 90 = woody wetlands; 95 = emergent herbaceous wetlands     \n",
+    "\n",
     "8 Fuelcode   See Table 1 in accompanying data document      \n",
     "9 Area_burned  Burned area    \n",
     "10 Prefire_fuel   Pre-fire dry mass of fuel       \n",
@@ -43,13 +45,15 @@
     "15 EPM2.5   PM2.5 emission intensity    \n",
     "16 Cwd_frac   Mass fraction of fuel consumed (consumed_fuel) that was coarse woody debris     \n",
     "17 Duff_frac   Mass fraction of fuel consumed (consumed_fuel) that was duff     \n",
-    "18 Fuel_moisture_class   Code for fuel moisture class: 1 = very dry; 2 = dry; 3 = moderate; 4 = moist (see Table 7 of accompanying data document)      \n",
+    "### Fuel Moisture Class\n",
+    "18 Fuel_moisture_class   Code for fuel moisture class: 1 = very dry; 2 = dry; 3 = moderate; 4 = moist (see Table 7 of accompanying data document) \n",
+    "\n",
     "19 Burn_source   Source of fire activity data that identified this pixel as burned. 1 = MTBS; 2 = MCD64; 3 = GEOMAC; 4 = FOD     \n",
     "20 Burnday_source   Source or method used to estimate day of year pixel burned. See accompanying data document for details.  12 = MCD64; 15 = MCD14; 17=VIIRS; 77 = No valid burn days for the fire event and no containment date. Fire duration and burn days filled using fire size based burn day distribution.  78 = No valid burn days for the fire event but a valid containment date exists. Burn days filled using fire size based burn day distribution. 81 = Fire event has one or more valid burn day (code 12 or 15).  Burn days filled based on distance to pixels with valid burn days     \n",
     "21 BSEV   Thematic burn severity classification     \n",
     "22 BSEV_flag   Value of 1 indicates that the BSEV value was estimated using methods described in accompanying data document!\n",
     "\n",
-    "## BSEV Descriptions:\n",
+    "### BSEV Descriptions:\n",
     "MTBS assigns six burn severity classifications (BSEVs) topixels within fire boundaries:     \n",
     "(1) unburned to low burn severity,    \n",
     "(2) low burn severity,    \n",
@@ -58,6 +62,46 @@
     "(5) increased green, and    \n",
     "(6) no data.    \n",
     "We electedto  designate  a  BSEV  1  as  unburned,  which  is  consistentwith MTBS program publications that describe this classi-fication as areas which are either unburned or where visiblefire  effects  occupy<5 %  of  the  site  at  the  time  of  obser-vation  (Schwind,  2008).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fuel Code:\n",
+    "\n",
+    "\tFuel Code \tCover Type \n",
+    "-99 \t0 \tNon-fuel     \n",
+    "1 \t1 \tHerbaceous     \n",
+    "2 \t2 \tShrub / scrub     \n",
+    "1100 \tWhite / red / jack pine group     \n",
+    "1120 \tSpruce / fir group     \n",
+    "1140 \tLongleaf / slash pine group    \n",
+    "1160 \tLoblolly / shortleaf pine group    \n",
+    "1180 /2180 \tPinyon / juniper group    \n",
+    "1200 \tDouglas-fir group    \n",
+    "1220 \tPonderosa pine group    \n",
+    "1240 \tWestern white pine group   \n",
+    "1260 \tFir / spruce / mountain hemlock group   \n",
+    "1280 \tLodgepole pine group   \n",
+    "1300 \tHemlock / Sitka spruce group   \n",
+    "1320 \tWestern larch group   \n",
+    "1340 \tRedwood group   \n",
+    "1360 \tOther western softwoods group   \n",
+    "1370 \tCalifornia mixed conifer group   \n",
+    "1380 \tExotic softwoods group   \n",
+    "1400 \tOak / pine group   \n",
+    "1500 \tOak / hickory group   \n",
+    "1600 \tOak / gum / cypress group   \n",
+    "1700/2700 \tElm / ash / cottonwood group   \n",
+    "1800 \tMaple / beech / birch group   \n",
+    "1900/2900 \tAspen / birch group   \n",
+    "1910 \tAlder / maple group   \n",
+    "1920 \tWestern oak group   \n",
+    "1940 \tTanoak / laurel group   \n",
+    "1950/2950 \tOther western hardwoods group   \n",
+    "1980 \tTropical hardwoods group   \n",
+    "1990 \tExotic hardwoods group   "
    ]
   },
   {
