--- a/experimental code/ClusteringNASA-M6-ProductionCode.ipynb
+++ b/experimental code/ClusteringNASA-M6-ProductionCode.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=\"#C71585\"> Using DBSCAN to reduce the size of the spatial dataset </font>\n",
+    "# Using DBSCAN to reduce the size of the spatial dataset\n",
     "\n",
     "#### DBScan - https://scikit-learn.org/stable/modules/generated/sklearn.cluster.DBSCAN.html\n",
     "\n",
@@ -28,7 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"#C71585\"> Active fire data collected by NASA MODIS satellite </font>\n",
+    "------------------------------------------------------------------------------------------------\n",
+    "## Active fire data collected by NASA MODIS satellite\n",
     "\n",
     "#### MODIS Collection 6: Temporal Coverage: 2003 - 2019\n",
     "#### Data access: https://earthdata.nasa.gov/earth-observation-data/near-real-time/firms/c6-mcd14dl"
@@ -103,6 +104,7 @@
    "metadata": {},
    "source": [
     "### <font color = \"#C71585\"> 1- Split data into yearly datasets and run the clustering function for the year </font>\n",
+    "### 1- Split data into yearly datasets and run the clustering function for the year\n",
     "- to enhance the performance of the DBSCAN module, feed the data one year at a time\n",
     "- execute steps 1-4 for years 2003 through 2019"
    ]
@@ -147,6 +149,7 @@
    "metadata": {},
    "source": [
     "#### <font color=\"#C71585\"> Compute DBSCAN </font>\n",
+    "#### Compute DBSCAN\n",
     "\n",
     "- eps is the physical distance from each point that forms its neighborhood\n",
     "- min_samples is the min cluster size, otherwise it's noise - set to 1 so we get no noise\n",
@@ -179,7 +182,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=\"#C71585\"> Defining the Clustering Functions </font>"
+    "#### <font color=\"#C71585\"> Defining the Clustering Functions </font>\n",
+    "#### Defining the Clustering Functions"
    ]
   },
   {
@@ -229,7 +233,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> 2- Move the clustered datapoints into a dataframe </font>"
+    "### <font color=\"#C71585\"> 2- Move the clustered datapoints into a dataframe </font>\n",
+    "### 2- Move the clustered datapoints into a dataframe"
    ]
   },
   {
@@ -282,16 +287,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#groupedclusters.loc[(M6df_yearly['latitude']==groupedclusters['Latitude']) & (M6df_yearly['longitude']==groupedclusters['Longitude']), 'DOY'] = M6df_yearly['DOY']\n",
-    "#groupedclusters['DOY'] = groupedclusters.apply(lambda row : ((M6df_yearly['latitude']==row['Latitude']) & (M6df_yearly['longitude']==row['Longitude'])), axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Store the clusters dataframe into a csv\n",
     "groupedclusters.to_csv('/Users/nahidmacbook/Documents/DataScience/Data-Wildfire/TEST-ClusteredNASA-M6-'+str(year)+'.csv', encoding='utf-8')"
    ]
@@ -301,6 +296,7 @@
    "metadata": {},
    "source": [
     "### <font color=\"#C71585\"> 3- Find the point in each cluster that is closest to its centroid </font>\n",
+    "### 3- Find the point in each cluster that is closest to its centroid\n",
     "\n",
     "DBSCAN clusters may be non-convex. This technique just returns one representative point from each cluster. First get the lat,lon coordinates of the cluster's centroid (shapely represents the first coordinate in the tuple as x and the second as y, so lat is x and lon is y here). Then find the member of the cluster with the smallest great circle distance to the centroid.\n"
    ]
@@ -345,7 +341,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> 4- Save the Cluster Points and their respective data fields into CSV </font>"
+    "### <font color=\"#C71585\"> 4- Save the Cluster Points and their respective data fields into CSV </font>\n",
+    "### 4- Save the Cluster Points and their respective data fields into CSV"
    ]
   },
   {
