--- a/experimental code/ConnectingClusterPoints-NASAandUSDA-ProductionCode.ipynb
+++ b/experimental code/ConnectingClusterPoints-NASAandUSDA-ProductionCode.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=\"#C71585\"> Location of closest coordinate out of a list of coordinates </font>\n",
-    "### <font color=\"#C71585\"> Connecting NASA cluster centeroids to USDA unique fires </font>\n",
+    "<font color=\"#C71585\">  </font>\n",
+    "# Location of closest coordinate out of a list of coordinates\n",
+    "### Connecting NASA cluster centeroids to USDA unique fires\n",
     "##### - https://www.timvink.nl/closest-coordinates/\n",
     "##### - https://stackoverflow.com/questions/39107896/efficiently-finding-the-closest-coordinate-pair-from-a-set-in-python"
    ]
@@ -31,7 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Loading Datasets and setting variables </font>"
+    "### <font color=\"#C71585\"> Loading Datasets and setting variables </font>\n",
+    "### Loading Datasets and setting variables"
    ]
   },
   {
@@ -149,7 +151,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Encoding Cyclical Feature for finding the closest DOY to the given DOY </font>"
+    "### <font color=\"#C71585\"> Encoding Cyclical Feature for finding the closest DOY to the given DOY </font>\n",
+    "### Encoding Cyclical Feature for finding the closest DOY to the given DOY\n"
    ]
   },
   {
@@ -243,7 +246,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Function to locate Closest Coordinates and Pull data features from target DF to main DF </font>"
+    "### <font color=\"#C71585\"> Function to locate Closest Coordinates and Pull data features from target DF to main DF </font>\n",
+    "### Function to locate Closest Coordinates and Pull data features from target DF to main DF"
    ]
   },
   {
@@ -322,7 +326,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Write data back to disk </font>"
+    "### <font color=\"#C71585\"> Write data back to disk </font>\n",
+    "### Write data back to disk"
    ]
   },
   {
