--- a/experimental code/NASA-StatisticalAnalysis-ProductionCode.ipynb
+++ b/experimental code/NASA-StatisticalAnalysis-ProductionCode.ipynb
@@ -4,16 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This <span style=\"color:red\">word</span> is not black.\n",
     "\n",
-    "\n",
-    "# <font color=\"#C71585\"> Statitstical Analysis of NASA M6 </font>\n",
-    "#### <font color=\"#C71585\"> Description of NASA M6 key statistics </font>\n",
-    "#### <font color=\"#C71585\"> Correlation Analysis of Intensity Indicators, _frp, brightness, bright_t31_ </font>\n",
-    "#### <font color=\"#C71585\"> A peak into the distribution of 'frp', _an indicator of fire intensity_: </font>  https://feer.gsfc.nasa.gov/projects/emissions/\n",
-    "#### <font color=\"#C71585\"> Correlation Analysis of Intensity and Emission: </font> https://www.sciencedirect.com/science/article/pii/S1352231019303164\n",
-    "#### <font color=\"#C71585\"> Heatmap of fire Intensity over the United States </font> \n",
-    "#### <font color=\"#C71585\"> Correlation Analysis of Intensity and Fire Size </font> "
+    "<font color=\"#C71585\"> </font>\n",
+    "# Statitstical Analysis of NASA M6 \n",
+    "#### ** Description of NASA M6 key statistics \n",
+    "#### ** Correlation Analysis of Intensity Indicators, _frp, brightness, bright_t31_ \n",
+    "#### ** A peak into the distribution of 'frp', _an indicator of fire intensity_:   https://feer.gsfc.nasa.gov/projects/emissions/\n",
+    "#### ** Correlation Analysis of Intensity and Emission: https://www.sciencedirect.com/science/article/pii/S1352231019303164\n",
+    "#### ** Heatmap of fire Intensity over the United States \n",
+    "#### ** Correlation Analysis of Intensity and Fire Size "
    ]
   },
   {
@@ -47,7 +46,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Load Data </font>\n"
+    "### <font color=\"#C71585\"> Load Data </font>\n",
+    "### Load Data"
    ]
   },
   {
@@ -104,7 +104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Description of NASA M6 key statistics  </font>"
+    "### <font color=\"#C71585\"> Description of NASA M6 key statistics  </font>\n",
+    "### Description of NASA M6 key statistics"
    ]
   },
   {
@@ -317,7 +318,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Pairplot of key intensity indicators  </font>\n"
+    "### <font color=\"#C71585\"> Pairplot of key intensity indicators  </font>\n",
+    "### Pairplot of key intensity indicators"
    ]
   },
   {
@@ -350,7 +352,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Correlation Analysis of key Intensity Indicators </font>"
+    "### <font color=\"#C71585\"> Correlation Analysis of key Intensity Indicators </font>\n",
+    "### Correlation Analysis of key Intensity Indicators"
    ]
   },
   {
@@ -393,18 +396,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- <font color=\"#C71585\"> R2 Correlation of Brightness and FRP: 0.415403183 </font>\n",
-    "- <font color=\"#C71585\"> R2 Correlation of Brightness and Bright_t31: 0.335916857 </font>\n",
-    "- <font color=\"#C71585\"> R2 Correlation of FRP and Bright_t31: 0.100193615 </font>\n",
-    "- <font color=\"#C71585\"> There is a strong linear relationship between \"Brightness and Bright_t31\". </font>\n",
-    "- <font color=\"#C71585\"> \"Brightness\" correlates with \"FRP\" in an exponential manner. </font>"
+    "- <font color=\"#C71585\"> R2 Correlation of Brightness and FRP: 0.415403183 </font> R2 Correlation of Brightness and FRP: 0.415403183\n",
+    "- <font color=\"#C71585\"> R2 Correlation of Brightness and Bright_t31: 0.335916857 </font> R2 Correlation of Brightness and Bright_t31: 0.335916857\n",
+    "- <font color=\"#C71585\"> R2 Correlation of FRP and Bright_t31: 0.100193615 </font> R2 Correlation of FRP and Bright_t31: 0.100193615\n",
+    "- <font color=\"#C71585\"> There is a strong linear relationship between \"Brightness and Bright_t31\". </font> There is a strong linear relationship between \"Brightness and Bright_t31\".\n",
+    "- <font color=\"#C71585\"> \"Brightness\" correlates with \"FRP\" in an exponential manner. </font> \"Brightness\" correlates with \"FRP\" in an exponential manner."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Pairplot of key intensity indicators separated by Day and Night </font>"
+    "### <font color=\"#C71585\"> Pairplot of key intensity indicators separated by Day and Night </font>\n",
+    "### Pairplot of key intensity indicators separated by Day and Night"
    ]
   },
   {
@@ -438,7 +442,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Boxplot of key intensity indicators  </font>"
+    "### <font color=\"#C71585\"> Boxplot of key intensity indicators  </font>\n",
+    "### Boxplot of key intensity indicators"
    ]
   },
   {
@@ -501,7 +506,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Boxplot and Histogram of FRP and Brightness (Normalized)  </font>"
+    "### <font color=\"#C71585\"> Boxplot and Histogram of FRP and Brightness (Normalized)  </font>\n",
+    "### Boxplot and Histogram of FRP and Brightness (Normalized)"
    ]
   },
   {
@@ -596,7 +602,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Interactive heatmap of Fire Intensity across the United States  </font>"
+    "### <font color=\"#C71585\"> Interactive heatmap of Fire Intensity across the United States  </font>\n",
+    "### Interactive heatmap of Fire Intensity across the United States"
    ]
   },
   {
@@ -640,7 +647,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Interactive heatmap of Fire Intensity across the United States  </font>"
+    "### <font color=\"#C71585\"> Interactive heatmap of Fire Intensity across the United States  </font>\n",
+    "### Interactive heatmap of Fire Intensity across the United States"
    ]
   },
   {
@@ -686,7 +694,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Correlation Analysis of Fire Intensity and Fire Size  </font>"
+    "### <font color=\"#C71585\"> Correlation Analysis of Fire Intensity and Fire Size  </font>\n",
+    "### Correlation Analysis of Fire Intensity and Fire Size "
    ]
   },
   {
@@ -862,7 +871,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#C71585\"> Heatmap of Fire Intensity Seasonality  </font>"
+    "### <font color=\"#C71585\"> Heatmap of Fire Intensity Seasonality  </font>\n",
+    "### Heatmap of Fire Intensity Seasonality"
    ]
   },
   {
@@ -920,7 +930,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#0093bb\"> TEST SECTION: More Histograms and Distributions </font>"
+    "### <font color=\"#0093bb\"> TEST SECTION: More Histograms and Distributions </font>\n",
+    "### TEST SECTION: More Histograms and Distributions"
    ]
   },
   {
