Adding Fire Emissions Features Analysis and Visualization

--- a/experimental code/Data Analysis and Visualization of USDA Fire Emissions.ipynb
+++ b/experimental code/Data Analysis and Visualization of USDA Fire Emissions.ipynb
@@ -1281,33 +1281,6 @@
      "data": {
       "text/plain": [
        "fuelcode\n",
-       "1       1.980207\n",
-       "2       2.129121\n",
-       "1100    2.461684\n",
-       "1120    2.788044\n",
-       "1140    1.876236\n",
-       "Name: BSEV, dtype: float64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "emdata2 = emdata.groupby('fuelcode')['BSEV'].mean()\n",
-    "emdata2.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fuelcode\n",
        "2950    4\n",
        "1360    4\n",
        "2       4\n",
@@ -1316,19 +1289,19 @@
        "Name: BSEV, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emdata3 = emdata.groupby('fuelcode')['BSEV'].max().sort_values(ascending = False)\n",
-    "emdata3.head()"
+    "emdata2 = emdata.groupby('fuelcode')['BSEV'].max().sort_values(ascending = False)\n",
+    "emdata2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1343,19 +1316,19 @@
        "Name: BSEV, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emdata4 = emdata.groupby('fuelcode')['BSEV'].min().sort_values(ascending = False)\n",
-    "emdata4.head()"
+    "emdata3 = emdata.groupby('fuelcode')['BSEV'].min().sort_values(ascending = False)\n",
+    "emdata3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1368,19 +1341,19 @@
        "Name: BSEV, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emdata5 = emdata.groupby('covertype')['BSEV'].max().sort_values(ascending = False)\n",
-    "emdata5.head()"
+    "emdata4 = emdata.groupby('covertype')['BSEV'].max().sort_values(ascending = False)\n",
+    "emdata4.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1365,7 @@
        "Name: covertype, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1432,7 @@
        "max   0.497034   0.800324"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1472,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1500,7 @@
        "max   13337.510830   10477.593715"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1521,7 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1683,7 @@
        "max   0.497034   0.787142"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1750,7 @@
        "max   13337.510830    9591.987935"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1813,16 +1786,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x22e5fdc0bc8>"
+       "<seaborn.axisgrid.FacetGrid at 0x1ecb76cd2c8>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1876,12 +1849,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Histogram illustrates that largest number of wildfires consumed least amount PreFire Fuel Mass in hectares"
+    "### Histogram showing wildfire consumption of PreFire Fuel Mass in hectares\n",
+    "#### The largest number fire events consumed the least amount of PreFire Mass - hence they were small in magnitude"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1864,7 @@
        "Text(0, 0.5, 'Distributinon of PreFire Fuel Measurements')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1928,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1911,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1970,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2030,7 @@
        "5600950            3     1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,6 +2039,24 @@
     "# Creating a variable to toggle/limit the dataset to one year within the boundaries of California \n",
     "emdata2015_ca = emdata2015[(emdata2015.latitude > 34) & (emdata2015.longitude < -114)]\n",
     "emdata2015_ca[1:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(224640, 19)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show the shape of the data for California\n",
+    "print (emdata2015_ca.shape)"
    ]
   },
   {
@@ -2127,7 +2119,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x22e60336808>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ecb799ff48>"
       ]
      },
      "execution_count": 41,
