Add new random sample function

--- a/notebooks/WildFires_Models.ipynb
+++ b/notebooks/WildFires_Models.ipynb
@@ -127,43 +127,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#This helper function allows for a random sample instead of reading everything\n",
-    "\n",
-    "import random\n",
-    "\n",
-    "def read_random_sample(sample_size, file_name):\n",
-    "\n",
-    "\n",
-    "    total_records = 1328922 #number of records in file\n",
-    "    skip = sorted(random.sample(range(total_records), total_records-sample_size))\n",
-    "    \n",
-    "    #don't skip the header line of the file\n",
-    "    if (skip[0] == 0):\n",
-    "        skip[0] = 2\n",
-    "\n",
-    "        \n",
-    "    df = pd.read_csv(file_name, skiprows=skip)\n",
-    "  \n",
-    "    ''' #check to see numbers are being skipped - will only notice if a larger number of files is chosen\n",
-    "    for i in skip: \n",
-    "        print (skip[i], end =\" \") \n",
-    "        if i == 1000:\n",
-    "            return\n",
-    "    '''\n",
-    "    \n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -171,10 +134,8 @@
     "#Read the data from disk for faster access\n",
     "\n",
     "#get a sample of the data to save time - comment out if you want all the data\n",
-    "df_fires = read_random_sample(50000, 'data/FireIntensity_Model_June7_Clean.csv')\n",
+    "df_fires = pd.read_csv('data/FireIntensity_Model_June7_Clean.csv').sample(frac = 0.20)\n",
     "\n",
-    "#use this line to get all the data\n",
-    "#df_fires = pd.read_csv('data/FireIntensity_Model_June7_Clean.csv')\n",
     "\n"
    ]
   },
