--- a/notebooks/WildFires_Models.ipynb
+++ b/notebooks/WildFires_Models.ipynb
@@ -68,6 +68,7 @@
     "from sklearn.ensemble import BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier\n",
     "\n",
     "from yellowbrick.classifier import ClassificationReport\n",
+    "from sklearn.model_selection import KFold\n",
     "\n",
     "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -127,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Read the data from disk for faster access\n",
     "\n",
     "#get a sample of the data set to n rows, leave blank for all\n",
-    "df_fires = pd.read_csv('data/FireIntensity_Model_June7_Clean.csv').sample(20000)\n",
+    "df_fires = pd.read_csv('data/FireIntensity_Model_June7_Clean.csv').sample(50000)\n",
     "\n",
     "\n"
    ]
@@ -256,9 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
    "source": [
     "features = ['fire_region', 'season', 'fuelcode', 'prefire_fuel', \n",
     "            'fuel_moisture_class', 'temperature', 'humidity', \n",
@@ -268,12 +277,13 @@
     "\n",
     "\n",
     "y = df_fires[target]\n",
-    "X = df_fires[features]\n"
+    "X = df_fires[features]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +292,7 @@
        "\"\\ncolumn_trans = make_column_transformer((OneHotEncoder(), ['fire_region', 'season',\\n                                'fuelcode', 'fuel_moisture_class']),\\n                                 remainder='passthrough')\\n    \\ncolumn_trans.fit_transform(X)\\ny = LabelEncoder().fit_transform(y)\\n\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,8 +302,10 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "    \n",
-    "y = LabelEncoder().fit_transform(y)\n",
+    "\n",
+    "#need to add to pipeline\n",
+    "\n",
+    "#y = LabelEncoder().fit_transform(y)\n",
     "\n",
     "numeric_features = ['temperature', 'humidity', 'wind_speed']\n",
     "\n",
@@ -324,6 +336,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#need to add to pipeline\n",
+    "\n",
+    "kf = KFold(n_splits = 5, shuffle=True)\n",
+    "    \n",
+    "\n",
+    "for train, test in kf.split(X, y):\n",
+    "    X_train, X_test = X.iloc[train], X.iloc[test]\n",
+    "    y_train, y_test = y.iloc[train], y.iloc[test]\n",
+    "\n",
+    "        \n",
+    "\"\"\"\n",
+    "        estimator = model(**kwargs) \n",
+    "        estimator.fit(X_train, y_train)\n",
+    "        \n",
+    "        expected  = y_test\n",
+    "        predicted = estimator.predict(X_test)\n",
+    "\"\"\" \n",
+    "\n",
+    "print(type(y_train))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -333,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,10 +455,11 @@
     "    print(\"start Time =\", current_time)\n",
     "  \n",
     "    # Instantiate the classification model and visualizer\n",
-    "    model.fit(X, y, **kwargs)  \n",
+    "    model.fit(X_train, y_train.values.ravel(), **kwargs)  \n",
     "    \n",
-    "    expected = y\n",
-    "    predicted = model.predict(X)\n",
+    "    \n",
+    "    expected = y_test\n",
+    "    predicted = model.predict(X_test)\n",
     "    \n",
     "   \n",
     "    # Compute and return F1 (harmonic mean of precision and recall)\n",
@@ -438,16 +486,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start Time = 03:01:50\n",
-      "RandomForestClassifier: 0.8834718883515353\n",
-      "End Time = 03:01:52\n"
+      "start Time = 12:26:43\n",
+      "RandomForestClassifier: 0.35720743600039084\n",
+      "End Time = 12:26:46\n"
      ]
     }
    ],
