updated descriptions clean-up

--- a/experimental code/ClusteringGeo.ipynb
+++ b/experimental code/ClusteringGeo.ipynb
@@ -896,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Moving original data points placed into clusters into DataFrame"
+    "## Capturing individual data points (lat/long) that make up clusters into DataFrame"
    ]
   },
   {
@@ -1048,7 +1048,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "groupedclusters.to_csv('/Users/AlfHaugen/Python/Wildfire_Data/FireExports/Emclustermakeup_2006East.csv', encoding='utf-8')"
+    "groupedclusters.to_csv('../data/Emclustermakeup_2009.csv', encoding='utf-8')"
    ]
   },
   {
